--- a/instructions.tex
+++ b/instructions.tex
@@ -599,38 +599,38 @@ exit
 % is directly the \verb|\$HOME|, but the installation can be set elsewhere is needed.
 
 
-% ------------------------------------------------------------------------------
-\section{Building an example firmware for the Cortex R5F}
-%\label{sec:bulding-an-example}
-As visible on the official \href{https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1837006921/OpenAMP+Base+Hardware+Configurations\#Build-RPU-firmware}{Xilinx documentation about building a demo firmware}, this section will present the required steps for building a new firmware for the R5F core of our Kria board. The goal
-here is to have a demonstration firmware running, able to use the RPMsg system to communicate with the Linux APU.
+% % ------------------------------------------------------------------------------
+% \section{Building an example firmware for the Cortex R5F}
+% %\label{sec:bulding-an-example}
+% As visible on the official \href{https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/1837006921/OpenAMP+Base+Hardware+Configurations\#Build-RPU-firmware}{Xilinx documentation about building a demo firmware}, this section will present the required steps for building a new firmware for the R5F core of our Kria board. The goal
+% here is to have a demonstration firmware running, able to use the RPMsg system to communicate with the Linux APU.
 
-\subsection{Generating the platform configuration file}
-%\label{sec:gener-platf-conf}
-In order to have the libraries and configurations in the IDE ready to be used for our board, we need to obtain configuration files, as presented in the 
-\href{https://xilinx.github.io/kria-apps-docs/kv260/2022.1/build/html/docs/build_vitis_platform.html?highlight=xsa}{Xilinx guide for Kria and Vitis}. At the \href{https://github.com/Xilinx/kria-vitis-platforms}{dedicated repository}, we can have such configurations, but they required to be built.
+% \subsection{Generating the platform configuration file}
+% %\label{sec:gener-platf-conf}
+% In order to have the libraries and configurations in the IDE ready to be used for our board, we need to obtain configuration files, as presented in the 
+% \href{https://xilinx.github.io/kria-apps-docs/kv260/2022.1/build/html/docs/build_vitis_platform.html?highlight=xsa}{Xilinx guide for Kria and Vitis}. At the \href{https://github.com/Xilinx/kria-vitis-platforms}{dedicated repository}, we can have such configurations, but they required to be built.
 
-\verb|Cmake|, \verb|tcl| and \verb|idn| will become needed in order to build the firmware.
-As discussed in a thread on \href{https://support.xilinx.com/s/question/0D52E00006jrzsYSAQ/platform-project-cannot-be-created-on-vitis?language=en\_US}{Xilinx community forum}, \verb|libidn11| is specifically required, but creating a symbolic link from the current, 12 version works.
+% \verb|Cmake|, \verb|tcl| and \verb|idn| will become needed in order to build the firmware.
+% As discussed in a thread on \href{https://support.xilinx.com/s/question/0D52E00006jrzsYSAQ/platform-project-cannot-be-created-on-vitis?language=en\_US}{Xilinx community forum}, \verb|libidn11| is specifically required, but creating a symbolic link from the current, 12 version works.
 
-Here are the steps for building this configuration file:
-\begin{tcolorbox}
-\begin{minted}{sh}
-sudo apt-get update
-sudo apt-get install cmake tcl libidn11-dev \
-libidn-dev libidn12 idn
-sudo ln -s /usr/lib/x86_64-linux-gnu/libidn.so.12 \
-/usr/lib/x86_64-linux-gnu/libidn.so.11
+% Here are the steps for building this configuration file:
+% \begin{tcolorbox}
+% \begin{minted}{sh}
+% sudo apt-get update
+% sudo apt-get install cmake tcl libidn11-dev \
+% libidn-dev libidn12 idn
+% sudo ln -s /usr/lib/x86_64-linux-gnu/libidn.so.12 \
+% /usr/lib/x86_64-linux-gnu/libidn.so.11
 
-cd ~/Xilinx
-git clone --recursive \
-https://github.com/Xilinx/kria-vitis-platforms.git
-cd kria-vitis-platforms/k26/platforms
-export XILINX_VIVADO=/home/$USER/Xilinx/Vivado/2022.2/
-export XILINX_VITIS=/home/$USER/Xilinx/Vitis/2022.2/
-make platform PLATFORM=k26_base_starter_kit
-\end{minted}
-\end{tcolorbox}
+% cd ~/Xilinx
+% git clone --recursive \
+% https://github.com/Xilinx/kria-vitis-platforms.git
+% cd kria-vitis-platforms/k26/platforms
+% export XILINX_VIVADO=/home/$USER/Xilinx/Vivado/2022.2/
+% export XILINX_VITIS=/home/$USER/Xilinx/Vitis/2022.2/
+% make platform PLATFORM=k26_base_starter_kit
+% \end{minted}
+% \end{tcolorbox}
 
 
 \pagebreak
