--- a/instructions.tex
+++ b/instructions.tex
@@ -633,78 +633,78 @@ exit
 % \end{tcolorbox}
 
 
-\pagebreak
-\subsection{Setting up a new IDE project for the Kria board}
-%\label{sec:setting-up-new}
-With the platform configuration files available, we can now use the IDE to generate a
-new project for our board. The whole process will be described with screen captures and
-captions.
+% \pagebreak
+% \subsection{Setting up a new IDE project for the Kria board}
+% %\label{sec:setting-up-new}
+% With the platform configuration files available, we can now use the IDE to generate a
+% new project for our board. The whole process will be described with screen captures and
+% captions.
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./img/vitis_new/project1}
-  \caption{We are starting with creating a ``New Application Project''. You should be greeted with this wizard window. Next.}
-%  \label{fig:project1}
-\end{figure}
+% \begin{figure}[H]
+%   \centering
+%   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project1}
+%   \caption{We are starting with creating a ``New Application Project''. You should be greeted with this wizard window. Next.}
+% %  \label{fig:project1}
+% \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./img/vitis_new/project2}
-  \caption{For the platform, we need to get our build Kria configuration. In the ``Create a new platform...'' tab, click the ``Browse...'' button.}
-%  \label{fig:project2}
-\end{figure}
+% \begin{figure}[H]
+%   \centering
+%   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project2}
+%   \caption{For the platform, we need to get our build Kria configuration. In the ``Create a new platform...'' tab, click the ``Browse...'' button.}
+% %  \label{fig:project2}
+% \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./img/vitis_new/project3}
-  \caption{In the file explorer, we should navigate in the ``k26'' directory, where the configuration file was build.
-    From here we are looking for a ``.xsa'' file, located in a ``hw'' directory, as visible.}
-%  \label{fig:project3}
-\end{figure}
+% \begin{figure}[H]
+%   \centering
+%   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project3}
+%   \caption{In the file explorer, we should navigate in the ``k26'' directory, where the configuration file was build.
+%     From here we are looking for a ``.xsa'' file, located in a ``hw'' directory, as visible.}
+% %  \label{fig:project3}
+% \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./img/vitis_new/project4}
-  \caption{With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the ``psu\_cortex5\_0'' core
-    as a target. The other, Cortex 53 is the APU running Linux.}
-%  \label{fig:project4}
-\end{figure}
+% \begin{figure}[H]
+%   \centering
+%   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project4}
+%   \caption{With the configuration file loaded, we can now select a name for our platform, but most importantly, we have to select the ``psu\_cortex5\_0'' core
+%     as a target. The other, Cortex 53 is the APU running Linux.}
+% %  \label{fig:project4}
+% \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./img/vitis_new/project5}
-  \caption{In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for.
-    Once again, we want to use the ``psu\_cortex5\_0''.}
-%  \label{fig:project5}
-\end{figure}
+% \begin{figure}[H]
+%   \centering
+%   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project5}
+%   \caption{In this next window, we can give a name to our firmware project. It is also critical here to select the core we want to build for.
+%     Once again, we want to use the ``psu\_cortex5\_0''.}
+% %  \label{fig:project5}
+% \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./img/vitis_new/project6}
-  \caption{Here, we want to select ``freertos10\_xilinx'' as our Operating System. The rest can remain unchanged.}
-%  \label{fig:project6}
-\end{figure}
+% \begin{figure}[H]
+%   \centering
+%   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project6}
+%   \caption{Here, we want to select ``freertos10\_xilinx'' as our Operating System. The rest can remain unchanged.}
+% %  \label{fig:project6}
+% \end{figure}
 
-\begin{figure}[H]
-  \centering
-  \includegraphics[width=0.6\textwidth]{./img/vitis_new/project7}
-  \caption{Finally, we can select the demonstration template we are going to use; here we go with ``OpenAMP echo-test'' since we want to
-    have some simple try of the RPMsg system. Finish.}
-%  \label{fig:project7}
-\end{figure}
+% \begin{figure}[H]
+%   \centering
+%   \includegraphics[width=0.6\textwidth]{./img/vitis_new/project7}
+%   \caption{Finally, we can select the demonstration template we are going to use; here we go with ``OpenAMP echo-test'' since we want to
+%     have some simple try of the RPMsg system. Finish.}
+% %  \label{fig:project7}
+% \end{figure}
 
 
-In the Xilinx documentation, it is made mention of the addresses setting that should be checked in the \verb|lscript.ld| file.
-These valued look different from what could be set in the DTO for the Linux side, but they appear to
-work for the example we are running:
-\begin{tcolorbox}
-\begin{minted}{text}
-psu_ddr_S_AXI_BASEADDR             0x3ed00000
-psu_ocm_ram_1_S_AXI_BASEADDR       0xfffc0000
-psu_r5_tcm_ram_0_S_AXI_BASEADDR    0x00000000
-psu_r5_tcm_ram_1_S_AXI_BASEADDR    0x00020000
-\end{minted}
-\end{tcolorbox}
+% In the Xilinx documentation, it is made mention of the addresses setting that should be checked in the \verb|lscript.ld| file.
+% These valued look different from what could be set in the DTO for the Linux side, but they appear to
+% work for the example we are running:
+% \begin{tcolorbox}
+% \begin{minted}{text}
+% psu_ddr_S_AXI_BASEADDR             0x3ed00000
+% psu_ocm_ram_1_S_AXI_BASEADDR       0xfffc0000
+% psu_r5_tcm_ram_0_S_AXI_BASEADDR    0x00000000
+% psu_r5_tcm_ram_1_S_AXI_BASEADDR    0x00020000
+% \end{minted}
+% \end{tcolorbox}
 
 
 % ------------------------------------------------------------------------------
